feat: add postgres migrations